# llm-list

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pytest.ini  setup.cfg
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
