[metadata]
description-file = README.md
license_files = LICENSE
long_description_content_type = text/markdown
author = Tom Sapletta
author_email = info@softreck.dev
license = Apache-2.0
url = https://github.com/softreck/llm-list

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[egg_info]
tag_build = 
tag_date = 0

[flake8]
max-line-length = 88
exclude = .git,__pycache__,.venv,venv,build,dist
per-file-ignores =
    # Allow non-abstract empty methods in abstract base classes
    __init__.py: D104
    # Allow unused imports in __init__ files
    __init__.py: F401
max-complexity = 10

[coverage:run]
source = llm_list
omit = 
    */__init__.py
    */tests/*
    */_version.py

[coverage:report]
show_missing = True
skip_covered = True
fail_under = 80
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug
    raise NotImplementedError
    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError
    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:
    @(abc\.)?abstractmethod

[coverage:html]
directory = htmlcov

[build_sphinx]
all_files = 1
build-dir = docs/_build
source-dir = docs/source

[pydocstyle]
add_ignore = D100,D101,D102,D103,D104,D105,D106,D107
match = (?!test_).*\.py

[pycodestyle]
max-line-length = 88
ignore = E203,W503

[pyright]
pythonVersion = "3.8"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
exclude = ["**/site-packages"]
